--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -2,6 +2,6 @@ $color-primary: #262626;
 $color-secondary: #0095f6;
 $color-white: #fff;
 $dark-white: #fafafa;
+$color-gray: #8e8e8e;
 $border-color: #dbdbdb;
-
 $container-width: 935px;
