--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -4,4 +4,10 @@ $color-white: #fff;
 $dark-white: #fafafa;
 $color-gray: #8e8e8e;
 $border-color: #dbdbdb;
+$color-gradient: linear-gradient(
+  to bottom,
+  rgba(222, 0, 70, 1),
+  rgba(247, 163, 75, 1)
+);
 $container-width: 935px;
+$border: 1px solid $border-color;
