--- a/src/styles/global.module.scss
+++ b/src/styles/global.module.scss
@@ -1,5 +1,10 @@
 @import "./variables.module.scss";
 
+@mixin active {
+  &:active {
+    opacity: 0.8;
+  }
+}
 @mixin input {
   margin: 0;
   padding: 0;
@@ -12,4 +17,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@mixin buttonPrimary {
+  background-color: transparent;
+  color: $color-secondary;
 }
