--- a/src/components/post/post.module.scss
+++ b/src/components/post/post.module.scss
@@ -11,6 +11,7 @@
     font-weight: 600;
     font-size: 0.875rem;
     line-height: 1.125rem;
+    cursor: pointer;
   }
   small {
     color: $color-gray;
@@ -41,7 +42,6 @@
   &_actions {
     display: flex;
     height: 54px;
-
     align-items: center;
     padding-inline: 1rem;
     svg {
@@ -65,6 +65,7 @@
       &:last-child {
         color: $color-gray;
         font-weight: 400;
+        line-height: 1.5rem;
       }
     }
     margin-bottom: 1rem;
