--- a/src/pages/messages/components/body/body.module.scss
+++ b/src/pages/messages/components/body/body.module.scss
@@ -3,5 +3,6 @@
   width: min($container-width, 100%);
   margin: 0 auto;
   display: flex;
-  margin-top: 20px;
+  margin-top: 1.25rem;
+  height: 85vh;
 }
