--- a/src/pages/messages/components/chat/chat.module.scss
+++ b/src/pages/messages/components/chat/chat.module.scss
@@ -2,4 +2,54 @@
 .chat {
   width: 60%;
   border: $border;
+  height: 100%;
+  box-sizing: border-box;
+  &_navbar {
+    display: flex;
+    align-items: center;
+    padding-inline: 2rem;
+    height: 3rem;
+    border-bottom: 1px solid $border-color;
+    cursor: pointer;
+    @include active;
+    img {
+      width: 22px;
+      height: 22px;
+      border-radius: 50%;
+    }
+    p {
+      font-size: 1rem;
+      margin-left: 1rem;
+      font-weight: 600;
+    }
+    svg {
+      margin-left: auto;
+      @include active;
+    }
+  }
+  &_body {
+    display: flex;
+    flex-direction: column;
+    padding-inline: 1rem;
+    overflow: auto;
+    height: 80%;
+  }
+  &_input {
+    border: $border;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 2.75rem;
+    margin: 1rem;
+    padding-inline: 1rem;
+    border-radius: 1.375rem;
+
+    input {
+      width: 100%;
+      padding-inline: 1rem;
+    }
+  }
+  button {
+    @include buttonPrimary;
+  }
 }
