--- a/src/components/post/thumbnail/thumbnail.module.scss
+++ b/src/components/post/thumbnail/thumbnail.module.scss
@@ -1,7 +1,8 @@
+@import "styles/global.module.scss";
 .thumbnail_img {
   position: relative;
-  width: 292px;
-  height: 292px;
+  width: calc(($container-width/3) - 1rem);
+  height: calc(($container-width/3) - 1rem);
   margin-right: 1rem;
   margin-bottom: 1rem;
   cursor: pointer;
@@ -12,11 +13,39 @@
     width: 21px;
     height: 21px;
   }
+  &:hover {
+    .thumbnail_hover {
+      opacity: 1;
+    }
+  }
+  .thumbnail_hover {
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color-primary, 0.6);
+    position: absolute;
+    z-index: 1;
+    @include center;
+    gap: 2rem;
+    p {
+      display: flex;
+      color: $color-white;
+      align-items: center;
+      gap: 0.5rem;
+    }
+    svg {
+      position: static;
+      path {
+        fill: $color-white;
+      }
+    }
+  }
 }
+
 .thumbnail_video {
   position: relative;
-  width: 615px;
-  height: 615px;
+  width: calc(($container-width/3) * 2 - 1rem);
+  height: calc(($container-width/3) * 2 - 1rem);
   margin-right: 1rem;
   margin-bottom: 1rem;
   cursor: pointer;
@@ -25,6 +54,34 @@
     top: 1rem;
     right: 1rem;
     width: 21px;
+
     height: 21px;
+  }
+  &:hover {
+    .thumbnail_hover {
+      opacity: 1;
+    }
+  }
+  .thumbnail_hover {
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color-primary, 0.6);
+    position: absolute;
+    z-index: 1;
+    @include center;
+    gap: 2rem;
+    p {
+      display: flex;
+      color: $color-white;
+      align-items: center;
+      gap: 0.5rem;
+    }
+    svg {
+      position: static;
+      path {
+        fill: $color-white;
+      }
+    }
   }
 }
