--- a/src/components/nopost/nopost.module.scss
+++ b/src/components/nopost/nopost.module.scss
@@ -1,9 +1,17 @@
 .nopost {
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   margin-top: 5rem;
+  align-items: center;
+  svg {
+    width: 4rem;
+    height: 4rem;
+    cursor: default;
+  }
   h1 {
     font-weight: 100;
+    margin-top: 1rem;
   }
 }
