--- a/src/pages/profile/components/profileContents/contents.module.scss
+++ b/src/pages/profile/components/profileContents/contents.module.scss
@@ -10,20 +10,28 @@
       @include active;
       user-select: none;
       display: flex;
+
       align-items: center;
       gap: 0.5rem;
-      padding: 1rem 0px;
+      padding: 0.5rem 0px;
       text-transform: uppercase;
       font-size: 0.75rem;
       line-height: 1.125rem;
       color: $color-gray;
       font-weight: 600;
+      border-top: 2px solid transparent;
       svg {
         width: 0.75rem;
         height: 0.75rem;
       }
       &:focus {
         border-top: 2px solid $border-color;
+        svg {
+          path {
+            color: $color-primary;
+          }
+        }
+        color: $color-primary;
       }
     }
   }
