--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -12,3 +12,4 @@ $color-gradient: linear-gradient(
 $container-width: 935px;
 $border: 1px solid $border-color;
 $btn-border-radius: 0.25rem;
+$shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
