--- a/src/pages/home/components/body/body.module.scss
+++ b/src/pages/home/components/body/body.module.scss
@@ -1,7 +1,5 @@
 @import "styles/main.module.scss";
 .body_container {
   display: flex;
-  width: min(100%, $container-width);
-  margin: 0 auto;
-  margin-top: 1.688rem;
+  @include body;
 }
