--- a/src/styles/global.module.scss
+++ b/src/styles/global.module.scss
@@ -56,3 +56,24 @@
   background-color: $color-white;
   border: $border;
 }
+@mixin menu_item {
+  padding: 0.5rem 1rem;
+  background-color: $color-white;
+  &:hover {
+    background-color: $dark-white;
+  }
+  &:first-child {
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+  }
+  &:last-child {
+    border-bottom-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+  }
+}
+@mixin body {
+  width: min(100%, $container-width);
+  margin: 0 auto;
+  box-sizing: border-box;
+  margin-top: 1.25rem;
+}
