settings page done

--- a/src/components/inputs/input.module.scss
+++ b/src/components/inputs/input.module.scss
@@ -30,3 +30,15 @@
     }
   }
 }
+.file_input {
+  opacity: 0;
+}
+.checkbox {
+  display: flex;
+  align-items: center;
+  margin: 0.5rem 0px;
+  label {
+    @include form_label;
+    margin-left: 0.5rem;
+  }
+}
