--- a/src/components/inputs/input.module.scss
+++ b/src/components/inputs/input.module.scss
@@ -11,7 +11,11 @@
   border: 1px solid $border-color;
   padding: 5px;
   border-radius: 3px;
+  z-index: 100px;
   position: relative;
+  .background_button {
+    @include background_button;
+  }
   &_input {
     @include input;
     border: none;
@@ -19,17 +23,48 @@
     height: 20px;
     text-align: center;
     color: $color-primary;
+    z-index: 100px;
   }
-  svg {
+
+  .search_icon {
     position: absolute;
-    width: 10px;
-    height: 10px;
     left: 35%;
-    path {
-      fill: $color-gray;
+    svg {
+      width: 10px;
+      height: 10px;
+
+      path {
+        fill: $color-gray;
+      }
+    }
+  }
+
+  &_menu {
+    @include menu;
+
+    top: 2.5rem;
+    left: 0;
+    position: absolute;
+    width: 350px;
+    overflow: auto;
+    height: 250px;
+    &_head {
+      display: flex;
+      align-items: baseline;
+      justify-content: space-between;
+      padding: 0.5rem 1rem;
+      h2 {
+        font-size: 1rem;
+      }
+    }
+    svg {
+      position: static;
+      width: 1rem;
+      height: 1rem;
     }
   }
 }
+
 .file_input {
   opacity: 0;
 }
