--- a/src/components/menu/menu.module.scss
+++ b/src/components/menu/menu.module.scss
@@ -1,14 +1,9 @@
 @import "styles/main.module.scss";
 .menu {
   cursor: pointer;
+  @include menu;
   button {
-    position: fixed;
-    width: 100vw;
-    background-color: transparent;
-    left: 0;
-    z-index: 1;
-    top: 0;
-    height: 100vh;
+    @include background_button;
   }
   &_toggle {
     position: relative;
@@ -20,9 +15,10 @@
       box-shadow: $shadow;
       display: flex;
       flex-direction: column;
-      left: -100%;
       border-radius: 0.5rem;
       margin-top: 0.8rem;
+      width: 100%;
+      min-width: fit-content;
     }
   }
 }
