notifications ui designed

--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -17,7 +17,8 @@
       display: flex;
       gap: 22px;
       align-items: center;
-      img {
+
+      .profile_img {
         width: 22px;
         border-radius: 50%;
       }
