--- a/src/components/menu/menu.module.scss
+++ b/src/components/menu/menu.module.scss
@@ -1,7 +1,7 @@
 @import "styles/main.module.scss";
 .menu {
   cursor: pointer;
-  @include menu;
+
   button {
     @include background_button;
   }
@@ -10,15 +10,10 @@
     display: block;
     z-index: 3;
     .menu_items {
+      @include menu;
       position: absolute;
-      background-color: $color-white;
-      box-shadow: $shadow;
-      display: flex;
-      flex-direction: column;
-      border-radius: 0.5rem;
+      right: 0;
       margin-top: 0.8rem;
-      width: 100%;
-      min-width: fit-content;
     }
   }
 }
