--- a/src/components/inputs/input.module.scss
+++ b/src/components/inputs/input.module.scss
@@ -66,7 +66,15 @@
 }
 
 .file_input {
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
   opacity: 0;
+  cursor: pointer;
 }
 .checkbox {
   display: flex;
