--- a/src/components/comment/comment.module.scss
+++ b/src/components/comment/comment.module.scss
@@ -1,12 +1,12 @@
 @import "styles/variables.module.scss";
 .comment {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   padding-bottom: 0.7rem;
   svg {
     width: 0.75rem;
     height: 0.75rem;
+    margin-left: auto;
   }
   img {
     width: 2rem;
@@ -27,6 +27,7 @@
     display: flex;
     align-items: baseline;
     margin-top: 0.2rem;
+
     small,
     span {
       color: $color-gray;
