--- a/src/components/postcontainer/showpost.module.scss
+++ b/src/components/postcontainer/showpost.module.scss
@@ -5,11 +5,34 @@
   border-radius: 0.5rem;
   height: 512px;
   width: min($container-width, 100%);
+  p {
+    font-weight: 600;
+    font-size: 0.875rem;
+    line-height: 1.125rem;
+    cursor: pointer;
+  }
+  small {
+    color: $color-gray;
+    cursor: pointer;
+  }
   &_container {
     width: 60%;
     img {
       width: 100%;
       height: 100%;
+    }
+  }
+  &_actions {
+    display: flex;
+    height: 54px;
+    align-items: center;
+    padding-inline: 1rem;
+    svg {
+      width: 40px;
+      &:last-child {
+        justify-self: flex-end;
+        margin-left: auto;
+      }
     }
   }
   &_detail {
@@ -25,5 +48,34 @@
       overflow: auto;
       padding: 1rem;
     }
+  }
+}
+.comment_form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 2.5rem;
+  padding: 0.375rem 1rem;
+  border-top: 1px solid $border-color;
+  svg,
+  input,
+  button {
+    height: 2.5rem;
+  }
+  svg {
+    width: 2.5rem;
+    box-sizing: border-box;
+    padding: 0.5rem;
+    @include active;
+  }
+  input {
+    width: 100%;
+    box-sizing: border-box;
+    border: none;
+    height: 2.4rem;
+  }
+  button {
+    @include buttonPrimary;
+    font-size: 0.875rem;
   }
 }
