--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -9,6 +9,7 @@ $color-gradient: linear-gradient(
   rgba(222, 0, 70, 1),
   rgba(247, 163, 75, 1)
 );
+$color-danger: red;
 $container-width: 935px;
 $border: 1px solid $border-color;
 $btn-border-radius: 0.25rem;
