--- a/src/components/post/thumbnail/thumbnail.module.scss
+++ b/src/components/post/thumbnail/thumbnail.module.scss
@@ -6,6 +6,11 @@
   margin-right: 1rem;
   margin-bottom: 1rem;
   cursor: pointer;
+  img {
+    width: 100%;
+    object-fit: cover;
+    height: 100%;
+  }
   svg {
     position: absolute;
     top: 1rem;
