code review and post likes added

--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -20,7 +20,9 @@
 
       .profile_img {
         width: 22px;
+        height: 22px;
         border-radius: 50%;
+        object-fit: cover;
       }
     }
   }
