--- a/src/components/comment/comment.module.scss
+++ b/src/components/comment/comment.module.scss
@@ -13,6 +13,8 @@
     height: 2rem;
     border-radius: 50%;
     margin-right: 1rem;
+    object-fit: cover;
+    cursor: pointer;
   }
   &_body {
     display: flex;
