--- a/src/components/popup/userList/userlist.module.scss
+++ b/src/components/popup/userList/userlist.module.scss
@@ -21,10 +21,12 @@
     justify-content: space-between;
     padding: 0.5rem 1rem;
     img {
-      width: 2rem;
-      height: 2rem;
+      width: 2rem !important;
+      height: 2rem !important;
       margin: 0;
       margin-right: 1rem;
+      border-radius: 50%;
+      object-fit: cover;
     }
     &_info {
       width: 100%;
