--- a/src/components/postcontainer/showpost.module.scss
+++ b/src/components/postcontainer/showpost.module.scss
@@ -17,9 +17,12 @@
   }
   &_container {
     width: 60%;
+
     img {
       width: 100%;
       height: 100%;
+
+      object-fit: cover;
     }
   }
   &_actions {
