--- a/src/pages/profile/components/profileInfo/profileInfo.module.scss
+++ b/src/pages/profile/components/profileInfo/profileInfo.module.scss
@@ -8,14 +8,13 @@
     font-size: 1.75rem;
     line-height: 2rem;
   }
-  img {
-    width: 8rem !important;
-    height: 8rem !important;
+  &_img {
+    width: 8rem;
+    height: 8rem;
     padding: 0;
     margin-inline: 7%;
     border-radius: 50%;
     object-fit: cover;
-    object-position: center;
   }
   &_info {
     width: 100%;
