--- a/src/pages/profile/components/profileInfo/profileInfo.module.scss
+++ b/src/pages/profile/components/profileInfo/profileInfo.module.scss
@@ -9,15 +9,19 @@
     line-height: 2rem;
   }
   &_img {
-    width: 8rem;
-    height: 8rem;
-    padding: 0;
+    width: 149px;
+    height: 149px;
+
+    img {
+      object-fit: cover;
+      border-radius: 50%;
+      width: 149px;
+      height: 149px;
+    }
     margin-inline: 7%;
-    border-radius: 50%;
-    object-fit: cover;
   }
   &_info {
-    width: 100%;
+    width: 70%;
 
     p {
       display: block;
