--- a/src/components/postcontainer/showpost.module.scss
+++ b/src/components/postcontainer/showpost.module.scss
@@ -16,13 +16,11 @@
     cursor: pointer;
   }
   &_container {
-    width: 60%;
-
+    width: 614px;
+    background-color: #000;
     img {
       width: 100%;
-      height: 100%;
-
-      object-fit: cover;
+      height: 512px !important;
     }
   }
   &_actions {
