--- a/src/components/postcontainer/showpost.module.scss
+++ b/src/components/postcontainer/showpost.module.scss
@@ -3,7 +3,7 @@
   background-color: $color-white;
   display: flex;
   border-radius: 0.5rem;
-  height: 512px;
+  height: 90vh;
   width: min($container-width, 100%);
   p {
     font-weight: 600;
@@ -16,11 +16,16 @@
     cursor: pointer;
   }
   &_container {
-    width: 614px;
+    width: 712px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #000;
+    overflow: hidden;
     img {
       width: 100%;
-      height: 512px !important;
+      object-fit: contain;
     }
   }
   &_actions {
@@ -30,10 +35,6 @@
     padding-inline: 1rem;
     svg {
       width: 40px;
-      &:last-child {
-        justify-self: flex-end;
-        margin-left: auto;
-      }
     }
   }
   &_detail {
