--- a/src/components/messageProfile/messageProfile.module.scss
+++ b/src/components/messageProfile/messageProfile.module.scss
@@ -8,8 +8,10 @@
     background-color: $dark-white;
   }
   img {
-    width: 3.5rem;
+    width: 52px;
     border-radius: 50%;
+    height: 52px;
+    object-fit: cover;
     margin-right: 0.75rem;
   }
   p {
