--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -14,3 +14,7 @@ $container-width: 935px;
 $border: 1px solid $border-color;
 $btn-border-radius: 0.25rem;
 $shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+$container-small: 576px;
+$container-medium: 768px;
+$container-large: 992px;
+$container-xlarge: 1200px;
